--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -558,16 +558,12 @@ video {
   grid-column: span 1 / span 1;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
 .col-span-4 {
   grid-column: span 4 / span 4;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
 }
 
 .mx-4 {
@@ -585,12 +581,21 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mr-4 {
@@ -609,28 +614,32 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[10\%\] {
-  margin-top: 10%;
-}
-
 .mt-\[15\%\] {
   margin-top: 15%;
 }
 
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mt-\[8\%\] {
-  margin-top: 8%;
-}
-
 .mt-\[5\%\] {
   margin-top: 5%;
+}
+
+.mt-\[50\%\] {
+  margin-top: 50%;
+}
+
+.mt-\[30\%\] {
+  margin-top: 30%;
+}
+
+.mt-\[20\%\] {
+  margin-top: 20%;
+}
+
+.mt-\[18\%\] {
+  margin-top: 18%;
+}
+
+.mt-\[17\%\] {
+  margin-top: 17%;
 }
 
 .block {
@@ -653,20 +662,8 @@ video {
   height: 100vh;
 }
 
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-\[10\%\] {
-  height: 10%;
+.h-\[80\%\] {
+  height: 80%;
 }
 
 .w-\[60\%\] {
@@ -681,36 +678,8 @@ video {
   width: 100%;
 }
 
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[120px\] {
-  width: 120px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[700px\] {
-  width: 700px;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
 .max-w-md {
   max-width: 28rem;
-}
-
-.max-w-full {
-  max-width: 100%;
 }
 
 .flex-1 {
@@ -770,6 +739,14 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -777,6 +754,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#61C9A8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(97 201 168 / var(--tw-bg-opacity));
 }
 
 .p-8 {
@@ -996,16 +978,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
-  .md\:col-span-2 {
-    grid-column: span 2 / span 2;
-  }
-
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
+  }
+
+  .md\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
   .md\:mx-0 {
@@ -1027,10 +1005,6 @@ video {
 
   .md\:h-screen {
     height: 100vh;
-  }
-
-  .md\:w-full {
-    width: 100%;
   }
 
   .md\:grid-cols-2 {
