Profile.vue pagination done

--- a/src/style.css
+++ b/src/style.css
@@ -31,3 +31,8 @@
   @apply text-white font-semibold py-2 mt-3 px-4 rounded hover:bg-green-600;
   background-color: #61c9a8;
 }
+
+.paginateButton {
+  @apply px-4 py-2 text-white rounded-md hover:bg-green-600 my-10 mx-3;
+  background-color: #61c9a8;
+}
