--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -942,6 +942,29 @@ video {
   background-color: #61c9a8;
 }
 
+.paginateButton {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+  border-radius: 0.375rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.paginateButton:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.paginateButton {
+  background-color: #61c9a8;
+}
+
 .hover\:bg-green-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
