--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -613,10 +613,6 @@ video {
   margin-top: 15%;
 }
 
-.mt-\[17\%\] {
-  margin-top: 17%;
-}
-
 .mt-\[5\%\] {
   margin-top: 5%;
 }
@@ -710,21 +706,8 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .border {
   border-width: 1px;
-}
-
-.bg-\[\#61C9A8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(97 201 168 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -906,7 +889,7 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-/* Habit Feed */
+/* HabitFeed.vue */
 
 .contentcard {
   margin-left: auto;
@@ -963,6 +946,40 @@ video {
 
 .paginateButton {
   background-color: #61c9a8;
+}
+
+/* Create.vue */
+
+.habitcreateCard {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 17%;
+  flex: 1 1 0%;
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 2rem;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.habitCreateButton {
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(97 201 168 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.habitCreateButton:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-green-600:hover {
