--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,9 @@
 .formlabel {
   @apply block mb-2;
 }
-
+.Submitbutton {
+  @apply bg-[#61C9A8] hover:bg-green-600 text-white font-bold py-2 px-4 rounded;
+}
 .formerror {
   @apply text-red-500 mb-5;
 }
