Error Template for user

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -522,6 +522,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .fixed {
   position: fixed;
 }
@@ -1021,7 +1055,7 @@ video {
 .profileEditCard {
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 17%;
+  margin-top: 10%;
   flex: 1 1 0%;
   border-radius: 0.75rem;
   --tw-bg-opacity: 1;
